--- a/app/views/home/dates.html.erb
+++ b/app/views/home/dates.html.erb
@@ -1,91 +1,186 @@
+
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
 
-    .heading-tittle::after {
-    top: 14%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
+.table-fill {
+  background: white;
+  border-radius:3px;
+  border-collapse: collapse;
+  height: 320px;
+  margin: auto;
+  max-width: 1000px;
+  padding:5px;
+  width: 100%;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  animation: float 5s infinite;
 }
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+ 
+th {
+  color:#fff;
+  background:#333a56;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #fff;
+  font-size:23px;
+  font-weight: 100;
+  padding:24px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
 }
+
+th:first-child {
+  border-top-left-radius:3px;
+}
+ 
+th:last-child {
+  border-top-right-radius:3px;
+  border-right:none;
+}
+  
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom-: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+tr:hover td {
+  background:#4E5066;
+  color:#FFFFFF;
+  border-top: 1px solid #22262e;
+}
+ 
+tr:first-child {
+  border-top:none;
+}
+
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+ 
+tr:nth-child(odd):hover td {
+  background:#4E5066;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
+td {
+  background:#FFFFFF;
+  padding:20px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:18px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+}
+
+td:last-child {
+  border-right: 0px;
+}
+
+th.text-left {
+  text-align: left;
+}
+
+th.text-center {
+  text-align: center;
+}
+
+th.text-right {
+  text-align: right;
+}
+
+td.text-left {
+  text-align: left;
+}
+
+td.text-center {
+  text-align: center;
+}
+
+td.text-right {
+  text-align: right;
+}
+
+
     </style>
 <%end%>  
+    <div style="margin-bottom: 40px;">
+      <div class="heading-tittle color-black  w-container " style="max-width: none !important;">
+        
     <div>
-      <div class="heading-tittle color-black  w-container ">
-        <h2 class="" style="margin-top: 30px; margin-bottom: 30px;">IMPORTANT DATES</h2>
-        <div class="div-block-4">
-          <div>
-            <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #333a56;border-bottom: 1px solid white; border-top-left-radius: 10px;">
-                <h5 class="heading-6" style="color:white">Abstract Submissions</h5>
-              </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid white; border-top-right-radius: 10px; background-color: #ddd">
-                <h5 class="heading-7">September 30, 2018</h5>
-              </div>
-            </div>
+      <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
+        <div class="w-slider-mask">
+          <div class="slide-1 w-slide"></div>
+          <div class="slide-5 w-slide">
+            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
+              
+            </a>
           </div>
-          <div>
-            <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #333a56;border-bottom: 1px solid white;">
-                <h5 class="heading-6" style="color:white">Decision on Abstracts</h5>
-              </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid white; background-color: #ddd">
-                <h5 class="heading-7">October 20, 2018</h5>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #333a56;border-bottom: 1px solid white;">
-                <h5 class="heading-6" style="color:white">Final Paper Submission</h5>
-              </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid white; background-color: #ddd">
-                <h5 class="heading-7">November 15, 2018</h5>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #333a56; border-bottom-left-radius: 10px; padding-bottom: 2px;">
-                <h5 class="heading-6" style="color:white">Final Registration</h5>
-              </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid white; border-bottom-right-radius: 10px; background-color: #ddd">
-                <h5 class="heading-7">November 25, 2018</h5>
-              </div>
-            </div>
-          </div>
+          <!-- <div class="slide-6 w-slide"></div> -->
         </div>
+        <div class="w-slider-arrow-left">
+          <div class="w-icon-slider-left"></div>
+        </div>
+        <div class="w-slider-arrow-right">
+          <div class="w-icon-slider-right"></div>
+        </div>
+        <div class="w-slider-nav w-round"></div>
+      </div>
+      <div class="w-container"></div>
+      <h2 class="" style="margin-top: 30px; margin-bottom: 30px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">IMPORTANT DATES</p></h2>
+    </div>
+<table class="table-fill">
+<thead>
+<tr>
+<th class="text-left">Event</th>
+<th class="text-left">Dates</th>
+</tr>
+</thead>
+<tbody class="table-hover">
+<tr>
+<td class="text-left">Abstract Submissions</td>
+<td class="text-left">September 30, 2018</td>
+</tr>
+<tr>
+<td class="text-left">Decision on Abstracts</td>
+<td class="text-left">October 20, 2018</td>
+</tr>
+<tr>
+<td class="text-left">Final Paper Submission</td>
+<td class="text-left">November 15, 2018</td>
+</tr>
+<tr>
+<td class="text-left">Final Registration</td>
+<td class="text-left">November 25, 2018</td>
+</tr>
+</tbody>
+</table>
+
       </div>
     </div>
