--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -1,80 +1,59 @@
+
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
-
-    .heading-tittle::after {
-    top: 49%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
-}
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
     </style>
-<%end%>
+<%end%> 
 
 <div>
       <div class="heading-tittle color-black w-container" style="margin-top: 0px;">
-        <h2 class="" style="margin: 30px 0px 30px 0px">Colloquium Details</h2>
+        <h2 class="" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Colloquium Details</p></h2>
     </div>
     <div>
-          <h6 class="heading-2">
-          	The half day Doctoral Colloquium will give opportunity to PhD/FPM students to present <br>
-          	 their research to other students and experts in the field. This will be held on <br>
-          	    <b> December 12th, 2018. </b>
+          <h6 class="heading-2" style="font-family: 'Roboto Condensed', sans-serif;">
+          	The half day Doctoral Colloquium will give opportunity to PhD/FPM students to present 
+          	 their research to other students and experts in the field. This will be held on 
+          	     December 12th, 2018. 
           	</h6>
           </div>
-          <div class="row">
-      <div class="card" style="padding: 10px; text-align: justify;">
-          <p>
-          	<b> PhD colloquium for doctoral candidates: </b>
-          	<li>
-          		The Colloquium committee will select approximately 25 participants who will be expected to participate in peer-review exercises, give short, informal presentations of their work during the Colloquium, and follow it up with extensive group discussion.
+          <div class="row-3" style="margin-top: 20px;">
+            <div class="column-6 w-col w-col-6">
+               <div class="card-track" style="padding: 10px;">
+                <div class="row-12 w-row">
+                
+            <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif; text-transform: uppercase;">PhD colloquium for doctoral candidates</h4>
+            <li style="padding-left: 10px;">
+              The Colloquium committee will select approximately 25 participants who will be expected to participate in peer-review exercises, give short, informal presentations of their work during the Colloquium, and follow it up with extensive group discussion.
 
-          	</li>
-          	<li>
-          		Faculty members at institutions in India and abroad would be invited as discussants for each of the shortlisted papers. Each paper invited for full-fledged presentation would be assigned a discussant.
+            </li>
+            <li style="padding-left: 10px;">
+              Faculty members at institutions in India and abroad would be invited as discussants for each of the shortlisted papers. Each paper invited for full-fledged presentation would be assigned a discussant.
 
-          	</li>
-          	<li>
-          		The conference is designed to ensure focussed discussions among the doctoral student participants, faculty discussants and other academician invitees on each paper.
-          	</li>
-          	<br>
-          	<b>
-          		Funding <br> <br>
-          	</b>
-          	We are hoping to offer some financial support to doctoral colloquium participants. The details of this support will be announced in the future. Women participants are strongly encouraged to apply.
-          </p>
-          </div></div>
+            </li>
+            <li style="padding-left: 10px;">
+              The conference is designed to ensure focussed discussions among the doctoral student participants, faculty discussants and other academician invitees on each paper.
+            </li>
+            <br>
+            </div>
+              </div>
+            </div>
+            <div class="column-6 w-col w-col-6">
+              <div class="card-track" style="padding: 10px;">
+                <h4 class="heading-8" style="text-align: center !important;font-family: 'Roboto Condensed', sans-serif;">FUNDING</h4>
+              We are hoping to offer some financial support to doctoral colloquium participants. The details of this support will be announced in the future. Women participants are strongly encouraged to apply.
+              </div>
+            </div>
+  </div>
 
 </div>
