--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,13 +10,42 @@
     <div>
       <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
         <div class="w-slider-mask">
-          <div class="slide-1 w-slide"></div>
+          <div class="slide-1 w-slide">
+            <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 80%; left: 52%;  cursor: pointer; opacity: 0">  
+              some content with the text <br>
+              again
+            </a>
+            <a href="https://www.unglobalcompact.org/" target="_blank" class="button" style="position: absolute; top: 81%; left: 69%;  cursor: pointer; opacity: 0"> 
+             some content with the  <br>
+              again 
+            </a>
+            <a href="http://spjimr.org/" target="_blank" class="button" style="position: absolute; top: 81%; left: 84%;  cursor: pointer; opacity: 0">  
+              some hs with the  <br>
+              again 
+            </a>
+
+          </div>
           <div class="slide-5 w-slide">
-            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
-              
+            <a href="/tracks" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">  
+            </a>
+            <a href="http://www.unprme.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 45%;  cursor: pointer; opacity: 0">  
+              some content with the text of <br>
+              again <br>
+              jasdh
+            </a>
+            <a href="https://www.unglobalcompact.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 65%;  cursor: pointer; opacity: 0"> 
+             some content with the  e<br>
+              again <br>
+              kajshg
+            </a>
+            <a href="http://spjimr.org/" target="_blank" class="button" style="position: absolute; top: 75%; left: 82%;  cursor: pointer; opacity: 0">  
+              some hs with the a <br>
+              again <br>
+              hbs
             </a>
           </div>
           <!-- <div class="slide-6 w-slide"></div> -->
+
         </div>
         <div class="w-slider-arrow-left">
           <div class="w-icon-slider-left"></div>
@@ -28,11 +57,13 @@
       </div>
       <div class="w-container"></div>
     </div>
+
+    
   
 
   <p>
     <div class="row">
-      <div class="card" style="padding: 10px; text-align: justify;">
+      <div class="" style="padding: 10px; text-align: justify;">
         The 8th PRME Asia Forum on ‘Sustainable Futures: Partnering in Responsible Management Education’ will take place on December 13-14, 2018 at S.P. Jain Institute of Management & Research (SPJIMR) in Mumbai, India. 
 The Forum aims to enable principled leadership, meaningful jobs, and a sustainable, inclusive agenda by bringing together advocates of responsible citizenship, management, and leadership from universities, corporates, civil society and management institutions across the Asia region. 
 The Forum is open to academic and non-academic audiences, and not limited to members of the PRME Chapter in the region or signatories of the UN-supported PRME.
