--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -2,50 +2,22 @@
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
-
-    .heading-tittle::after {
-    top: 50%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
-}
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
     </style>
 <%end%> 
 <div>
       <div class="heading-tittle color-black w-container">
-        <h2 class="-5" style="margin: 30px 0px 30px 0px;">Applications</h2>
+        <h2 class="-5" style="margin: 30px 0px 30px 0px;"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Applications</p></h2>
     </div>
     <div>
           <h6 class="heading-2">
@@ -57,7 +29,7 @@
           	</h6>
           </div>
           <div class="row">
-      <div class="card" style="padding: 10px; text-align: justify;">
+      <div class="" style="padding: 10px; text-align: justify;">
           <p>
           	<b> All items below should be collated into one PDF file named .pdf (substitute your full name where it reads YOURNAME): </b>
           	<li>
