--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -1,86 +1,59 @@
+
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
-
-    .heading-tittle::after {
-    top: 10%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
-}
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
     </style>
 <%end%> 
 <div>
   <div class="heading-tittle color-black w-container">
-    <h2 class="-5" style="margin: 30px 0px 30px 0px">Co chairs</h2>
-    <div class="row-3 w-row">
-      <div class="column-5 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+    <h2 class="-5" style="margin: 30px 0px 30px 0px"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Co chairs</p></h2>
+    <div class="row-2 w-row">
+      <div class="column-6 w-col w-col-6">
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8">Dr. Sandip Anand</h4>
-              <h5 class="heading-10">Founding Associate Dean
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sandip Anand</h4>
+              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Founding Associate Dean
               </h5>
-              <h5 class="heading-10">Xavier University Bhubaneswar</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Xavier University Bhubaneswar</h5>
             </div>
           </div>
         </div>
       </div>
       <div class="column-6 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="row-4 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9">
-              <h4 class="heading-8">Dr. Sapna Narula</h4>
-              <h5 class="heading-10">Head in the Department of Business Sustainability</h5>
-              <h5 class="heading-10">TERI School of Advanced Studies</h5>
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Sapna Narula</h4>
+              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Head in the Department of Business Sustainability</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">TERI School of Advanced Studies</h5>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="w-row">
-      <div class="column-5 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="w-row">
-            <div class="w-col w-col-3"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+    <div class="row-2 w-row">
+      <div class="column-6 w-col w-col-6">
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9" style="margin-top: 5px;">
-              <h4 class="heading-8">Dr. Preeti Tiwari</h4>
-              <h5 class="heading-10">Assistant Professor (Strategy)</h5>
-              <h5 class="heading-10">T A PAI Management Institute</h5>
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Preeti Tiwari</h4>
+              <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Assistant Professor (Strategy)</h5>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">T A PAI Management Institute</h5>
             </div>
           </div>
         </div>
