--- a/app/views/home/eac.html.erb
+++ b/app/views/home/eac.html.erb
@@ -1,155 +1,160 @@
+
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
-
-    .heading-tittle::after {
-    top: 5%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
-}
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
     </style>
 <%end%> 
-    <div>
+    <div style="margin-bottom: 100px;">
       <div class="heading-tittle color-black w-container">
-        <h2 class="-5 " style="margin: 30px 0px 30px 0px;">External advisory committee</h2>
+        <h2 class="-5 " style="margin: 30px 0px 30px 0px;"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> External advisory committee </p></h2>
         <div class="row-2 w-row">
           <div class="column-6 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="row-6 w-row" style="background-color: #f2f2f2">
-                <div class="w-col w-col-3"><img src="../Dr.-K-Kuperan-Vishwanathan.jpg" width="117" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="w-col w-col-9">
-                  <h4 class="heading-8">Dr. K Kuperan Vishwanathan</h4>
-                  <h5 class="heading-10">Professor and Head of Financial Analysis and Policy Group</h5>
-                  <h5 class="heading-10">Othman Yeop Abdullah Graduate School of Business, Malaysia<br></h5>
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Mr-Amit-Jakhar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%">
                 </div>
-              </div>
-            </div>
-          </div>
-          <div class="column-6 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="row-6 w-row" style="background-color: #f2f2f2">
-                <div class="w-col w-col-3"><img src="../Kamal-Singh-Executive-Director-UN-Global-Compact-Network-India.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="w-col w-col-9">
-                  &nbsp;
-                  <h4 class="heading-8">Mr. Kamal Singh</h4>
-                  <h5 class="heading-10">Executive Director</h5>
-                  <h5 class="heading-10">United Nations Global Compact Network India</h5>
-                  &nbsp;
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row-3 w-row">
-          <div class="column-5 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="row-5 w-row" style="background-color: #f2f2f2;">
-                <div class="w-col w-col-3"><img src="../Dr.-Pamsy-Hui.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="w-col w-col-9">
-                  <h4 class="heading-8">Dr. Pamsy Hui</h4>
-                  <h5 class="heading-10">MBA Programme Director</h5>
-                  <h5 class="heading-10">The Hong Kong Polytechnic University</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="column-6 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="row-4 w-row" style="background-color: #f2f2f2;">
-                <div class="w-col w-col-3"><img src="../Dr.-Bhaskar-Chatterjee.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="column-7 w-col w-col-9">
-                  <h4 class="heading-8">Dr. Bhaskar Chatterjee</h4>
-                  <h5 class="heading-10">Senior Director</h5>
-                  <h5 class="heading-10">Indian Institute of Learning and Management (IILM)</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="w-row">
-          <div class="column-6 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="w-row" style="background-color: #f2f2f2;">
-                <div class="w-col w-col-3"><img src="../Professor-PD-Jose.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
-                  <h4 class="heading-8">Dr. P.D. Jose</h4>
-                  <h5 class="heading-10">Professor (Strategy) &amp; Chair</h5>
-                  <h5 class="heading-10"> Indian Institute of Management-Bangalore<br></h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="column-6 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="w-row" style="background-color: #f2f2f2;">
-                <div class="w-col w-col-3"><img src="../Prof.-Stephen-Yong-Seung-Park.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
-                  <h4 class="heading-8">Prof. Stephen Yong-Seung Park</h4>
-                  <h5 class="heading-10">Dean &amp; Professor</h5>
-                  <h5 class="heading-10">Kyung Hee University, Seoul</h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="w-row" style="margin-top: 40px;">
-          <div class="column-5 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="w-row" style="background-color: #f2f2f2;">
-                <div class="w-col w-col-3"><img src="../Prof-Carole-Parkes.jpg" width="84" class="image-4" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
-                  <h4 class="heading-8">Prof. Carole Parkes</h4>
-                  <h5 class="heading-10">Professor of Responsible Management</h5>
-                  <h5 class="heading-10"> Winchester University Business School <br></h5>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="column-6 w-col w-col-6">
-            <div class="div-block-5">
-              <div class="w-row" style="background-color: #f2f2f2;">
-                <div class="w-col w-col-3"><img src="../Mr-Amit-Jakhar.jpg" class="image-6" style="border-radius: 50%"></div>
                 <div class="column-7 w-col w-col-9">
                   <h4 class="heading-10">&nbsp;</h4>
-                  <h4 class="heading-8">Mr. Amit Jakhar</h4>
-                  
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Mr. Amit Jakhar</h4>
                 </div>
               </div>
             </div>
           </div>
+
+            <!-- column 3 -->
+<!--             <div class="column-6 w-col w-col-6">
+            <div class="card" style="padding: 10px 0px 10px 0px !important;">
+            <img class="card-img-top" src="./Dr.-K-Kuperan-Vishwanathan.jpg" alt="Card image cap" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%">
+            <div class="card-body">
+            <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. K Kuperan Vishwanathan</h4>
+            <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Professor and Head of Financial Analysis and Policy Group</h5>
+            <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Othman Yeop Abdullah Graduate School of Business, Malaysia<br></h5>
+            </div>
+            </div>
+            </div> -->
+                    <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Dr.-Bhaskar-Chatterjee.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="column-7 w-col w-col-9">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Bhaskar Chatterjee</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; color:#6c757d!important">Senior Director</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif; margin-left: 10px; color:#6c757d!important">Indian Institute of Learning and Management (IILM)</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+        <div class="row-2 w-row">
+
+
+          <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Prof-Carole-Parkes.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Carole Parkes</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor of Responsible Management</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important"> Winchester University Business School <br></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Kamal-Singh-Executive-Director-UN-Global-Compact-Network-India.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="w-col w-col-9">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Mr. Kamal Singh</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">Executive Director</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">United Nations Global Compact Network India</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="row-2 w-row">
+          <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                 <div class="w-col w-col-3">
+                  <img src="../Dr.-K-Kuperan-Vishwanathan.jpg" width="117" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                 <div class="w-col w-col-9">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. K Kuperan Vishwanathan</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important; margin-left: 10px;">Professor and Head of Financial Analysis and Policy Group</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Othman Yeop Abdullah Graduate School of Business, Malaysia<br></h5>
+                </div>
+              </div>
+            </div>
+            </div>
+
+                                <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Dr.-Pamsy-Hui.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="w-col w-col-9">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Pamsy Hui</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">MBA Programme Director</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">The Hong Kong Polytechnic University</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="row-2 w-row">
+
+
+          <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Professor-PD-Jose.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. P.D. Jose</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Professor (Strategy) &amp; Chair</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important"> Indian Institute of Management-Bangalore<br></h5>
+                </div>
+              </div>
+            </div>
+          </div>
+                    <div class="column-6 w-col w-col-6">
+            <div class="card">
+              <div class="row-12 w-row">
+                <div class="w-col w-col-3">
+                  <img src="../Prof.-Stephen-Yong-Seung-Park.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
+                <div class="column-7 w-col w-col-9" style="margin-top: 5px;">
+                  <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Stephen Yong-Seung Park</h4>
+                  <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Dean &amp; Professor</h5>
+                  <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Kyung Hee University, Seoul</h5>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
         </div>
       </div>
     </div>
