--- a/app/views/home/org.html.erb
+++ b/app/views/home/org.html.erb
@@ -3,71 +3,43 @@
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
-
-    .heading-tittle::after {
-    top: 20%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
-}
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
     </style>
 <%end%> 
 <div>
   <div class="container-5 w-container">
     <div class="heading-tittle color-black w-container">
-      <h2 style="margin: 0px 0px 30px 0px">Organizing Committee</h2>
+      <h2 style="margin: 0px 0px 30px 0px"> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;"> Organizing Committee </p></h2>
     </div>
-    <div class="row-3 w-row">
+    <div class="row-2 w-row">
       <div class="column-6 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="row-4 w-row">
-            <div class="w-col w-col-3"><img src="../DrChandrikaParmar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../DrChandrikaParmar.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 20px;">
-              <h4 class="heading-8">Dr. Chandrika Parmar</h4>
-              <h5 class="heading-10">Associate Professor, SPJIMR</h5>
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Chandrika Parmar</h4>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Associate Professor, SPJIMR</h5>
             </div>
           </div>
         </div>
       </div>
-      <div class="column-5 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+      <div class="column-6 w-col w-col-6">
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../ProfDeepaKrishnan.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="w-col w-col-9" style="margin-top: 20px;">
-              <h4 class="heading-8" >Prof. Deepa Krishnan</h4>
-              <h5 class="heading-10" >Head of Abhyudaya, SPJIMR
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Prof. Deepa Krishnan</h4>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Head of Abhyudaya, SPJIMR
               </h5>
             </div>
           </div>
@@ -75,24 +47,24 @@
       </div>
     </div>
     <div class=" w-row">
-      <div class="column-5 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class=" w-row">
-            <div class="w-col w-col-3"><img src="../ProfJagdishRattanani.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+      <div class="column-6 w-col w-col-6">
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../ProfJagdishRattanani.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
-              <h4 class="heading-8">Mr. Jagdish Rattanani</h4>
-              <h5 class="heading-10">Editor, SPJIMR</h5>
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Mr. Jagdish Rattanani</h4>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Editor, SPJIMR</h5>
             </div>
           </div>
         </div>
       </div>
-      <div class="column-5 w-col w-col-6">
-        <div class="div-block-5" style="background-color: #f2f2f2">
-          <div class=" w-row">
-            <div class="w-col w-col-3"><img src="../DrNirjaMattoo.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+        <div class="column-6 w-col w-col-6">
+        <div class="card" style="height: 140px !important;">
+          <div class="row-12 w-row">
+            <div class="w-col w-col-3"><img src="../DrNirjaMattoo.JPG" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%;"></div>
             <div class="column-7 w-col w-col-9" style="margin-top: 25px;">
-              <h4 class="heading-8" >Dr. Nirja Mattoo</h4>
-              <h5 class="heading-10" >Chairperson of C-DoCC, SPJIMR
+              <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Dr. Nirja Mattoo</h4>
+              <h5 class="heading-10" style="font-size: 17px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important">Chairperson of C-DoCC, SPJIMR
               </h5>
             </div>
           </div>
