--- a/app/views/home/workshopdetails.html.erb
+++ b/app/views/home/workshopdetails.html.erb
@@ -2,74 +2,49 @@
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 0;
-    background-color: inherit;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 2;
-    font-size: 26px;
-    line-height: 24px;
-    background: #fff;
-    margin: 0;
-    text-transform: uppercase; }
+          text-transform: uppercase;
+          position: relative;
+          text-align: center;
+          font-size: 28px;
+          font-weight: 400px;
+          line-height: 10px;
+          letter-spacing: 1px;
+          font-family: 'Roboto Condensed', sans-serif;
+     }
+    
 
-    .heading-tittle.color-black h2{
-            color: #222;
-    }
-    .heading-tittle {
-    position: relative;
-    text-align: center;
-}
-.heading-tittle::before, .heading-tittle::after {
-    content: "";
-    position: absolute;
-    width: 35%;
-    height: 0;
-    border-top-width: 2px;
-    color: #3b1e9a;}
-
-    .heading-tittle::after {
-    top: 39%;
-    border-top-style: solid;
-    left: auto;
-    right: 33%;
-}
-:after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
     </style>
-<%end%>  
+<%end%> 
 <div>
       <div class="heading-tittle color-black w-container" style="margin-top: 30px; margin-bottom: 30px;">
-        <h2 class="-5">Workshop Details</h2>
+        <h2 class="-5"><p style="text-decoration: underline; text-decoration-color: #3b1e9a;">Workshop Details</p></h2>
     </div>
 
-          <div class="row">
-      <div class="card" style="padding: 10px; text-align: justify;">
-          <p>
-          	<b> Experiential learning: Towards developing leaders </b> <br>
-          	<div style="margin-left: 10px;">
-              <div class="div-block-5">
-              <div class=" w-row">
-              <div class="w-col w-col-2"><img src="../DrNirjaMattoo.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
-              <div class="w-col w-col-4" style="margin-top: 30px;">
-              Chair- Dr. Nirja Mattoo <br>
-              Chairperson, Centre for Development of Corporate Citizenship (C-DoCC)
-              SPJMR
+          <div class="row-2">
+            <div class="column-6 w-col w-col-6">
+              <div class="card-track" style="padding: 10px; text-align: justify;">
+                <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;"> <u> Experiential learning: Towards developing leaders</u></h4>
+                <div style="margin-left: 10px;">
+                  <div class=" w-row">
+                  <div class="w-col w-col-3">
+                    <img src="../DrNirjaMattoo.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%">
+                  </div>
+                  <div class="w-col w-col-9" style="margin-top: 20px;">
+                      <h5 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif;">Chair- Dr. Nirja Mattoo</h5>
+                      <h6 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; color:#6c757d!important">Chairperson, Centre for Development of Corporate Citizenship (C-DoCC) </h6>
+                      <h6 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif; color:#6c757d!important">SPJMR</h6>
+                  </div>
+                  </div>
+                </div>
+                </p>
               </div>
-          	</div></div>
-          	</div>
-          	<br>
-          	<b>
-          		Leveraging PRME for Global Partnerships (in partnership with UN Global Compact)
- <br> <br>
-          	</b>
-          	
-          </p>
-          </div></div>
+        </div>
+        <div class="column-6 w-col w-col-6">
+          <div class="card-track" style="height: 227px; padding: 10px;">
+
+            <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif; padding-top: 50px;"> <u> Leveraging PRME for Global Partnerships (in partnership with UN Global Compact) </u></h4>
+          </div>
+        </div>
+      </div>
 
 </div>
