--- a/app/views/partials/_flash.html.erb
+++ b/app/views/partials/_flash.html.erb
@@ -1,6 +1,6 @@
 <% if notice %>
 <div class="row">
-	<div class="card" style="text-align: center; background-color: red; color: white;">
+	<div class="" style="text-align: center; background-color: #dff0d8; color: #3c763d; border-color: #d6e9c6">
 		<%= notice.html_safe %>
 	</div>
 </div>
